[fix] Fixed Collapse style issues.

--- a/packages/common-theme/Collapse.scss
+++ b/packages/common-theme/Collapse.scss
@@ -44,6 +44,7 @@
         {
             position: relative;
             width: 100%;
+            flex: 1;
 
             .collapse-description
             {
